# Proyecto-SegFormer-Analitica-de-Datos

./: .dockerignore  .gitignore  Dockerfile  README.md  appStreamlit.py  appvideo.py  inferenciaimagen.py  pyproject.toml  requirements.txt
docs/: Architecture.md  Deploy.md
src/: 01_Explicacion.py  appStreamlit.py  segformer_model.py  styles.css
src/pages/: 01_Segmentacion.py  02_Segformer.py  03_Inferencia.py  04_Comparativa.py
