[project]
name = "huggingface-inferencia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.23.0",
    "opencv-python>=4.7.0",
    "pillow>=9.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.28.0",
    "streamlit>=1.20.0",
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "transformers>=4.30.0",
]
